Обновлен контроллер оформления заказа для улучшения обработки пунктов самовывоза: добавлено извлечение адреса из ПВЗ с ограничением длины. Изменен тип поля FIAS в модели города на bigint. Добавлен новый Twig-расширение для получения названия типа доставки по коду. Обновлены шаблоны для отображения информации о доставке.

--- a/templates/catalog/checkout/index.html.twig
+++ b/templates/catalog/checkout/index.html.twig
@@ -32,6 +32,8 @@
     <p class="text-xs text-gray-500 mt-6">Нажимая кнопку, вы соглашаетесь с условиями оферты и политикой конфиденциальности.</p>
   </div>
 
+  {{ component('CityModal') }}
+
   {# inline script removed: migrated to FSD feature checkout-form #}
 {% endblock %}
 
