--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -108,11 +108,12 @@
 
           <!-- Wishlist -->
           <div class="relative">
-            <a href="#" class="flex items-center space-x-2 p-2 rounded-lg hover:bg-gray-50 transition-colors group">
+            <a href="{{ path('catalog_wishlist') }}" class="flex items-center space-x-2 p-2 rounded-lg hover:bg-gray-50 transition-colors group" data-module="wishlist-counter">
               <div class="relative">
                 <svg class="w-6 h-6 text-gray-600 group-hover:text-blue-600 transition-colors" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"/>
                 </svg>
+                <span class="absolute -top-1 -right-2 inline-flex items-center justify-center px-1.5 py-0.5 text-xs font-semibold leading-none text-white bg-blue-600 rounded-full" data-wishlist-counter>{{ wishlist_count() }}</span>
               </div>
             </a>
           </div>
