Добавлено инициализация компонента WishlistCounter в методе init, что улучшает его функциональность. Обновлены шаблоны для отображения количества товаров в списке желаемого с использованием функции wishlist_count(). Эти изменения повышают удобство работы с функцией избранного и улучшают взаимодействие пользователей с интерфейсом.

--- a/templates/catalog/wishlist/index.html.twig
+++ b/templates/catalog/wishlist/index.html.twig
@@ -14,7 +14,7 @@
       <h1 class="text-2xl font-bold text-gray-900 mb-6">Моё избранное</h1>
 
       <div data-module="wishlist-counter">
-        <span class="text-sm text-gray-600">Всего: <span data-wishlist-counter>0</span></span>
+        <span class="text-sm text-gray-600">Всего: <span data-wishlist-counter>{{ wishlist_count() }}</span></span>
       </div>
 
       {% if items is defined and items|length > 0 %}
